--- a/Booking.Api/Booking.Api.csproj
+++ b/Booking.Api/Booking.Api.csproj
@@ -22,6 +22,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\Booking.View\Booking.View.csproj" />
+	</ItemGroup>
+
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Entities\" />
