--- a/Booking.Api/Booking.Api.csproj
+++ b/Booking.Api/Booking.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -27,8 +27,6 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Entities\" />
     <Folder Include="Repositories\Interfaces\" />
   </ItemGroup>
 
