--- a/Booking.View/Booking.View.csproj
+++ b/Booking.View/Booking.View.csproj
@@ -1,17 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Content Remove="Modals\MovieTheatreModal.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Include="Modals\MovieTheatreModal.razor" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Components\Layout\" />
+		<ProjectReference Include="..\booking.api\booking.api.csproj" />
+	</ItemGroup>
 
 </Project>
