--- a/Booking.View/Booking.View.csproj
+++ b/Booking.View/Booking.View.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<Folder Include="Components\Layout\" />
+		<PackageReference Include="MudBlazor" Version="6.12.0" />
 		<ProjectReference Include="..\booking.api\booking.api.csproj" />
 	</ItemGroup>
 
