--- a/BookerPortal.Web/BookerPortal.Web.csproj
+++ b/BookerPortal.Web/BookerPortal.Web.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+
+	<ItemGroup>
+		<Folder Include="Components\Layout\" />
+		<ProjectReference Include="..\booking.api\booking.api.csproj" />
+	</ItemGroup>
 </Project>
