--- a/BookerPortal.Web/BookerPortal.Web.csproj
+++ b/BookerPortal.Web/BookerPortal.Web.csproj
@@ -9,5 +9,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\booking.api\booking.api.csproj" />
+		<ProjectReference Include="..\Request.HTTP\Request.HTTP.csproj" />
 	</ItemGroup>
 </Project>
