--- a/Booking.View/Booking.Web.csproj
+++ b/Booking.View/Booking.Web.csproj
@@ -10,6 +10,7 @@
 		<Folder Include="Components\Layout\" />
 		<PackageReference Include="MudBlazor" Version="6.12.0" />
 		<ProjectReference Include="..\booking.api\booking.api.csproj" />
+		<ProjectReference Include="..\Request.HTTP\Request.HTTP.csproj" />
 	</ItemGroup>
 
 </Project>
