--- a/Request.HTTP/Request.HTTP.csproj
+++ b/Request.HTTP/Request.HTTP.csproj
@@ -9,10 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Requests\IRequests\" />
+    <ProjectReference Include="..\Booking.Api\Booking.Api.csproj" />
   </ItemGroup>
 
 </Project>
