Revert "Removed and moved folder to create separation as much as possible from backend and ui"
This reverts commit 23080d4c093869d26d11aba4fb689b12dd3c2db5.

--- a/Request.HTTP/Request.HTTP.csproj
+++ b/Request.HTTP/Request.HTTP.csproj
@@ -9,11 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Booking.Api\Booking.Api.csproj" />
+    <Folder Include="Requests\IRequests\" />
   </ItemGroup>
 
 </Project>
