--- a/BookerPortal.Web/BookerPortal.Web.csproj
+++ b/BookerPortal.Web/BookerPortal.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,5 +9,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\booking.api\booking.api.csproj" />
+		<ProjectReference Include="..\Request.HTTP\Request.HTTP.csproj" />
 	</ItemGroup>
 </Project>
