--- a/BookerPortal.Web/appsettings.json
+++ b/BookerPortal.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CinemaDbContext": "Server=(localdb)\\MSSQLLocalDB;Database=CinemaDbContext;Trusted_Connection=True;"
+  }
 }
