added icons for login/logout fixed roles

--- a/BookerPortal.Web/BookerPortal.Web.csproj
+++ b/BookerPortal.Web/BookerPortal.Web.csproj
@@ -11,4 +11,9 @@
 		<ProjectReference Include="..\booking.api\booking.api.csproj" />
 		<ProjectReference Include="..\Request.HTTP\Request.HTTP.csproj" />
 	</ItemGroup>
+
+
+	<ItemGroup>
+	  <None Include="wwwroot\access-denied.jpg" />
+	</ItemGroup>
 </Project>
