--- a/Booking.Api/appsettings.json
+++ b/Booking.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CinemaDbContext": "Server=(localdb)\\MSSQLLocal;Database=CinemaDbContext;Trusted_Connection=True;"
+    "CinemaDbContext": "Server=(localdb)\\MSSQLLocalDB;Database=CinemaDbContext;Trusted_Connection=True;"
   }
 }
