User name to Employee, movied register "employee" to dashboard so company "manager" can add new employee there. And kept form for register company. May be some other small changes.

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Booking.Api/Migrations/20240324161724_NewDataBase.cs
+/BookerPortal.Web/Components/Pages/MovieTheatrePages/GridColumn.razor
