--- a/BookerPortal.Web/BookerPortal.Web.csproj
+++ b/BookerPortal.Web/BookerPortal.Web.csproj
@@ -36,4 +36,9 @@
 	<ItemGroup>
 	  <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
 	</ItemGroup>
+
+
+	<ItemGroup>
+	  <Folder Include="Components\EditItems\MovieTheatreEdit\EditShow\" />
+	</ItemGroup>
 </Project>
